--- a/jetbul/template/index.html
+++ b/jetbul/template/index.html
@@ -37,9 +37,11 @@
                             </p>
 
                             <div class="rotabutonlar pt-3">
-                                <a href="" class="btn btn-warning"><i class="fa-regular fa-calendar"></i> Tarihleri
+                                <a href="takvim/{{rota.id}}" class="btn btn-warning"><i
+                                        class="fa-regular fa-calendar"></i> Tarihleri
                                     İncele</a>
-                                <a href="" class="btn btn-outline-dark mx-3"><i class="fa-solid fa-plane"></i> Uçağı
+                                <a href="ucak/{{rota.ucak.id}}" class="btn btn-outline-dark mx-3"><i
+                                        class="fa-solid fa-plane"></i> Uçağı
                                     İncele</a>
                             </div>
                         </div>
