--- a/jetbul/template/ucak.html
+++ b/jetbul/template/ucak.html
@@ -7,11 +7,39 @@
     <div class="row">
 
         <div class="col-md-12 p-2 bg-light mt-4 rounded px-4">
-            <h1 class="text-dark p-0 m-0 ">{{ airport.isim }}</h1>
+            <h1 class="text-dark p-0 m-0 ">{{ ucak.isim }}</h1>
+
+
+        </div>
+        <div class="my-5" style="height:500px;object-fit:cover;overflow:hidden;display:flex:align-items:center;">
+            <img style="width:100%;object-fit:cover;" src="{{BASE_DIR}}/media/{{ ucak.resim }}" alt="">
         </div>
 
         <div class="bg-dark text-white p-5 fs-5 mt-5 rounded">
-            <p>{{ airport.aciklama }}</p>
+            <div class="row">
+                <div class="col-6">
+                    <p>Marka: {{ ucak.marka }}</p>
+                    <p>Model: {{ ucak.model }}</p>
+                    <p>Yıl: {{ ucak.yil }}</p>
+                    <p>Kapasite: {{ ucak.kapasite }}</p>
+                </div>
+
+                <div class="col-6">
+                    <p>Hız: {{ ucak.hiz }}</p>
+                    <p>Boy: {{ ucak.boy }}</p>
+                    <p>Ülke: {{ ucak.ulke }}</p>
+                </div>
+
+
+            </div>
+
+
+
+
+            <div class="fs-4">
+                <p>Detay: {{ ucak.detay }}</p>
+            </div>
+
         </div>
 
     </div>
